<resources>
    <string name="app_name">ChatterBox</string>
    <string name="login_UsernameHint">Email</string>
    <string name="login_PasswordHint">Password</string>
    <string name="login_StayLoggedIn">Stay logged in</string>
    <string name="login_ImageDescriptor">Application Logo</string>
    <string name="login_loginButton">Login</string>
    <string name="login_registerButton">Register</string>
    <string name="login_reset_password_button">Reset Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registerFirstName">First Name</string>
    <string name="registerLastName">Last Name</string>
    <string name="registerEmail">Email</string>
    <string name="registerNickname">Username</string>
    <string name="registerConfirmPassword">Confirm Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appName">ChatterBox</string>
    <string name="appGroupName">Group 10 TCSS 450</string>
    <string name="registerInfo">Register for an account.</string>
    <string name="home_weather_title">Weather</string>
    <string name="home_changelocation">Change Location</string>
    <string name="home_current_conditions">Current Conditions</string>
    <string name="home_twentyfour">12 Hour Forecast</string>
    <string name="home_tenday">Weekly Forecast</string>
    <string name="location_zipcode">Zipcode</string>
    <string name="location_or">Or</string>
    <string name="location_map">Choose a location on the map</string>
    <string name="location_change">Set Changes</string>
    <string name="chat_message">Send a message</string>
    <string name="chat_send">Send</string>
    <string name="settings_color">Choose Theme</string>
    <string name="settingsChatFont">Chat Font Size</string>
    <string name="settingsFontOne">Small</string>
    <string name="settingsFontTwo">Medium</string>
    <string name="settingsFontThree">Large</string>
    <string name="settingsColorThemeDefault">Pretty in Pink Fudge</string>
    <string name="settingsColorThemeTwo">Purpellow</string>
    <string name="settingsColorThemeThree">Pastel Dreams</string>
    <string name="connections_existing">Existing</string>
    <string name="connections_add">Add</string>
    <string name="connections_invite">Invite</string>
    <string name="connections_requests">Requests</string>
    <string name="existing_remove">Remove</string>
    <string name="existing_message">Message</string>
    <string name="add_info">Add A New Connection</string>
    <string name="add_info_2">Search By:</string>
    <string name="add_nickname">Username</string>
    <string name="add_info4">Or</string>
    <string name="add_first_name">First Name</string>
    <string name="add_and">AND</string>
    <string name="add_last_name">Last Name</string>
    <string name="add_email">Email</string>
    <string name="add_search">Search</string>
    <string name="add_firstlast">First/Last Name</string>
    <string name="add_add">Add</string>
    <string name="invite_info">Invite a friend!</string>
    <string name="invite_email">Email</string>
    <string name="invite_contacts">Invite via Contacts</string>
    <string name="invite_send">Send Invite</string>
    <string name="requests_accept">Accept</string>
    <string name="requests_decline">Decline</string>
    <string name="login_user">Username</string>
    <string name="requests_out">Outgoing</string>
    <string name="requests_in">Incoming</string>
    <string name="reset_password_hint">New Password</string>
    <string name="reset_password_confirm_hint">Confirm New Password</string>
    <string name="reset_password_title_text_view">Reset Password</string>
    <string name="reset_password_username_hint_text_view">Enter your username</string>
    <string name="reset_password_email_hint_text_view">Enter your email</string>
    <string name="reset_password_button">Submit</string>
    <string name="weather_text">Current Weather:</string>
    <string name="weather_temp">Temperature:</string>
    <string name="weather_city">City:</string>
    <string name="weather_sunrise">Sunrise:</string>
    <string name="weather_sunset">Sunset:</string>
    <string name="title_activity_location_map_change">Map</string>
    <string name="chat_create_new_chat_button">Create New Chat</string>
</resources>
