<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/settings_color"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/settingsChatFont"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsColorGroup" />

    <RadioGroup
        android:id="@+id/settingsFontGroup"
        android:layout_width="312dp"
        android:layout_height="129dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/settingsFontTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/settingsFontOne"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settingsFontOne"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/settingsFontTwo"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/settingsFontTwo"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/settingsFontThree"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settingsFontThree"
            android:textSize="18dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/settingsColorGroup"
        android:layout_width="134dp"
        android:layout_height="93dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/settingsThemeOne"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settingsColorThemeDefault" />

        <RadioButton
            android:id="@+id/settingsThemeTwo"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settingsColorThemeTwo" />

        <RadioButton
            android:id="@+id/settingsThemeThree"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settingsColorThemeThree" />
    </RadioGroup>

    <Button
        android:id="@+id/settingsSaveChanges"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/location_change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>