<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout12"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/resetPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/reset_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordConfirmEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPEmailEditText"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/resetPasswordConfirmEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/reset_password_confirm_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordEditText" />

    <Button
        android:id="@+id/resetPasswordSubmitButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/reset_password_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordConfirmEditText" />

    <TextView
        android:id="@+id/resetPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/reset_password_title_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@+id/resetPUsernameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resetPEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/reset_password_email_hint_text_view"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPUsernameEditText" />

    <EditText
        android:id="@+id/resetPUsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/reset_password_username_hint_text_view"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/resetPEmailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordTextView" />

</android.support.constraint.ConstraintLayout>